Updated results pipeline to include datetime

--- a/results/analysis.ipynb
+++ b/results/analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d9ead301-f438-40ed-87c2-4a1179d0c46f",
    "metadata": {},
    "outputs": [
@@ -55,6 +55,7 @@
        "      <th>gradient_time</th>\n",
        "      <th>total_time</th>\n",
        "      <th>system</th>\n",
+       "      <th>datetime</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -68,6 +69,7 @@
        "      <td>8.074201</td>\n",
        "      <td>18.963636</td>\n",
        "      <td>expanse</td>\n",
+       "      <td>2024-01-18 10:36:59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -79,6 +81,7 @@
        "      <td>4.474140</td>\n",
        "      <td>13.116883</td>\n",
        "      <td>expanse</td>\n",
+       "      <td>2024-01-18 10:37:19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -90,6 +93,7 @@
        "      <td>3.318024</td>\n",
        "      <td>11.496085</td>\n",
        "      <td>expanse</td>\n",
+       "      <td>2024-01-18 10:37:33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -101,6 +105,7 @@
        "      <td>1.280677</td>\n",
        "      <td>19.505161</td>\n",
        "      <td>expanse</td>\n",
+       "      <td>2024-01-18 10:36:26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -112,6 +117,7 @@
        "      <td>0.755967</td>\n",
        "      <td>5.493714</td>\n",
        "      <td>expanse</td>\n",
+       "      <td>2024-01-18 10:36:47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -125,15 +131,15 @@
        "3  NVIDIA-A100-PCIE-40GB          1           True      psb5  1.299491   \n",
        "4  NVIDIA-A100-PCIE-40GB          2           True      psb5  0.904503   \n",
        "\n",
-       "   gradient_time  total_time   system  \n",
-       "0       8.074201   18.963636  expanse  \n",
-       "1       4.474140   13.116883  expanse  \n",
-       "2       3.318024   11.496085  expanse  \n",
-       "3       1.280677   19.505161  expanse  \n",
-       "4       0.755967    5.493714  expanse  "
+       "   gradient_time  total_time   system            datetime  \n",
+       "0       8.074201   18.963636  expanse 2024-01-18 10:36:59  \n",
+       "1       4.474140   13.116883  expanse 2024-01-18 10:37:19  \n",
+       "2       3.318024   11.496085  expanse 2024-01-18 10:37:33  \n",
+       "3       1.280677   19.505161  expanse 2024-01-18 10:36:26  \n",
+       "4       0.755967    5.493714  expanse 2024-01-18 10:36:47  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +148,38 @@
     "# Load compiled output data\n",
     "results_filepath = \"./results.csv\"\n",
     "results = pd.read_csv(results_filepath)\n",
+    "results[\"datetime\"] = pd.to_datetime(results[\"datetime\"], format=\"%a %b %d %H:%M:%S %Y\")\n",
     "results.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e876e82-4c88-435c-b514-ac7f387d439e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gpu_type          object\n",
+       "gpu_count          int64\n",
+       "containerized       bool\n",
+       "molecule          object\n",
+       "scf_time         float64\n",
+       "gradient_time    float64\n",
+       "total_time       float64\n",
+       "system            object\n",
+       "datetime          object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results.dtypes"
    ]
   },
   {
@@ -155,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "f6febeb6-8452-4f29-b36b-8da8f089b688",
    "metadata": {},
    "outputs": [],
